# cineco_cal

./: .dockerignore  Cargo.toml  Dockerfile  README.md  event.ics  input.txt
.github/workflows/: deploy.yml
deploy/: cineco_cal  cineco_cal.yml
src/: calendar.rs  error.rs  main.rs
src/calendar/: cinegestion.rs  config.rs
